fix/WC-5 - Fix build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,12 @@ repositories {
     mavenCentral()
 }
 
+build {
+    dependsOn ':di:build'
+    dependsOn ':di:publishMavenJavaPublicationToMavenLocal'
+    dependsOn ':main:build'
+    dependsOn ':main:publishMavenJavaPublicationToMavenLocal'
+}
+
+
+
