--- a/di/build.gradle
+++ b/di/build.gradle
@@ -7,6 +7,9 @@ repositories {
     mavenCentral()
 }
 
+group = 'com.github'
+version = '1.0'
+
 dependencies {
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 }
@@ -14,9 +17,6 @@ dependencies {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.github'
-            artifactId = 'framework'
-            version = '1.0'
             from components.java
         }
     }
@@ -31,5 +31,3 @@ jar {
         attributes['Implementation-Version'] = '1.0'
     }
 }
-
-publishMavenJavaPublicationToMavenLocal {}.mustRunAfter('build')
