--- a/main/build.gradle
+++ b/main/build.gradle
@@ -9,8 +9,13 @@ repositories {
     mavenCentral()
 }
 
+group = 'com.github'
+version = '1.0'
+
 dependencies {
     implementation project(':di')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
     liquibaseRuntime group: 'org.liquibase', name: 'liquibase-core', version: '4.26.0'
     liquibaseRuntime group: 'info.picocli', name: 'picocli', version: '4.7.5'
     liquibaseRuntime group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
@@ -34,9 +39,6 @@ liquibase {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'com.github'
-            artifactId = 'blog'
-            version = '1.0'
             from components.java
         }
     }
@@ -56,4 +58,3 @@ jar {
 
 
 build.dependsOn update
-publishMavenJavaPublicationToMavenLocal {}.mustRunAfter('build')
