--- a/di/build.gradle
+++ b/di/build.gradle
@@ -12,6 +12,8 @@ version = '1.0'
 
 dependencies {
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
 }
 
 publishing {
