--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,13 @@ group = 'com.github'
 version = '1.0'
 
 dependencies {
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'
     implementation group: 'org.springframework', name: 'spring-context', version: '6.1.5'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
     runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
     liquibaseRuntime group: 'org.liquibase', name: 'liquibase-core', version: '4.27.0'
     liquibaseRuntime group: 'info.picocli', name: 'picocli', version: '4.7.5'
     liquibaseRuntime group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
