--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,16 @@ group = 'com.github'
 version = '1.0'
 
 dependencies {
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'
-    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.5'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
-    runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
-    liquibaseRuntime group: 'org.liquibase', name: 'liquibase-core', version: '4.27.0'
-    liquibaseRuntime group: 'info.picocli', name: 'picocli', version: '4.7.5'
-    liquibaseRuntime group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'org.springframework:spring-context:6.1.5'
+    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.23.1'
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    liquibaseRuntime 'org.liquibase:liquibase-core:4.27.0'
+    liquibaseRuntime 'info.picocli:picocli:4.7.5'
+    liquibaseRuntime 'org.postgresql:postgresql:42.7.3'
 }
 
 File propsFile = new File("${project.rootDir}/src/main/resources/db/changelog/liquibase.properties")
