refactor/WF-1 - Refactor the code Added the thread max pool feature Refactored ConnectionHolderImpl release method Refactored user extraction from the db Refactored the DataSource bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/senladb
 spring.datasource.username=senlapguser
 spring.datasource.password=pgpwd4senla
+spring.datasource.max-pool-size=2
 
 com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master.xml
