--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/senladb
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=senlapguser
 spring.datasource.password=pgpwd4senla
-spring.datasource.max-pool-size=2
+
+spring.jpa.hibernate.ddl-auto=validate
 
 com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master.xml
