--- a/build.gradle
+++ b/build.gradle
@@ -12,43 +12,40 @@ group = "com.github"
 version = "1.0"
 
 ext {
-    springVersion = "6.1.6"
-    aspectjVersion = "1.9.22"
-    hibernateVersion="6.4.4.Final"
-    mapStructVersion="1.5.5.Final"
-    junitVersion="5.10.2"
-    lombokVersion="1.18.32"
-    loggerVersion="2.23.1"
+    mapStructVersion = "1.5.5.Final"
+    lombokVersion = "1.18.32"
+    hibernateVersion = "6.4.4.Final"
 }
 
 dependencies {
-    implementation "org.springframework:spring-context:${springVersion}"
-    implementation "org.springframework:spring-orm:${springVersion}"
-    implementation "org.hibernate.orm:hibernate-core:${hibernateVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.17.0"
-    implementation "org.apache.logging.log4j:log4j-api:${loggerVersion}"
-    implementation "org.aspectj:aspectjrt:${aspectjVersion}"
-    implementation "org.postgresql:postgresql:42.7.3"
-    implementation "org.liquibase:liquibase-core:4.27.0"
-    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
-
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-    testImplementation "com.h2database:h2:2.2.224"
-    testImplementation "org.springframework:spring-test:${springVersion}"
-
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-
-    runtimeOnly "org.apache.logging.log4j:log4j-core:${loggerVersion}"
-    runtimeOnly "org.aspectj:aspectjweaver:${aspectjVersion}"
-
-    compileOnly "org.projectlombok:lombok:${lombokVersion}"
-    compileOnly "org.hibernate.orm:hibernate-jpamodelgen:${hibernateVersion}"
-
-    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-    annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen:${hibernateVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    implementation(platform("org.springframework:spring-framework-bom:6.1.6"))
+    implementation(platform("org.apache.logging.log4j:log4j-bom:2.23.1"))
+    implementation(platform("com.fasterxml.jackson:jackson-bom:2.17.0"))
+    implementation(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
+    implementation("org.springframework:spring-context")
+    implementation("org.springframework:spring-orm")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    implementation("com.fasterxml.jackson.core:jackson-databind")
+    implementation("org.apache.logging.log4j:log4j-api")
+    implementation("org.liquibase:liquibase-core:4.27.0")
+    implementation("org.mapstruct:mapstruct:${mapStructVersion}")
+    implementation("jakarta.persistence:jakarta.persistence-api")
+    runtimeOnly("org.hibernate.orm:hibernate-core")
+    runtimeOnly("org.postgresql:postgresql:42.7.3")
+    runtimeOnly("org.apache.logging.log4j:log4j-core")
+    compileOnly("org.projectlombok:lombok:${lombokVersion}")
+    compileOnly("org.hibernate.orm:hibernate-jpamodelgen")
+    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+    annotationProcessor(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
+    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen")
+    annotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
+    testImplementation(platform("org.junit:junit-bom:5.10.2"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.springframework:spring-test")
+    testImplementation("org.assertj:assertj-core:3.25.3")
+    testRuntimeOnly("com.h2database:h2:2.2.224")
 }
+
 sourceSets {
     main.java.srcDirs += 'build/generated/source/apt/main'
 }
