--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation("org.liquibase:liquibase-core:4.27.0")
     implementation("org.mapstruct:mapstruct:${mapStructVersion}")
     implementation("jakarta.persistence:jakarta.persistence-api")
-    runtimeOnly("org.hibernate.orm:hibernate-core")
+    implementation("org.hibernate.orm:hibernate-core")
     runtimeOnly("org.postgresql:postgresql:42.7.3")
     runtimeOnly("org.apache.logging.log4j:log4j-core")
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
