--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,1 +1,2 @@
-com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master-test.xml
+spring.datasource.driver-class-name=org.h2.Driver
+com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master.xml
