fix/WF-32 - Fix test module Added more tests Added more sql scripts Added naming strategy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=senlapguser
 spring.datasource.password=pgpwd4senla
 
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master.xml
