--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,3 @@
 spring.datasource.driver-class-name=org.h2.Driver
 com.github.blog.changelogFile=classpath:db/changelog/db.changelog-master.xml
+spring.jpa.hibernate.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
