--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation(platform("com.fasterxml.jackson:jackson-bom:2.17.0"))
     implementation(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
     implementation("org.springframework:spring-webmvc")
+    //implementation("org.springframework.data:spring-data-rest-webmvc:4.2.5")
     implementation("org.springframework:spring-context")
     implementation("org.springframework:spring-orm")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
