--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,22 @@ ext {
 }
 
 dependencies {
+    //  fix
     implementation "org.apache.commons:commons-compress:1.26.1"
+    //  spring
     implementation(platform("org.springframework:spring-framework-bom:6.1.6"))
-    implementation(platform('org.springframework.security:spring-security-bom:6.2.4'))
-    implementation(platform("org.apache.logging.log4j:log4j-bom:2.23.1"))
-    implementation(platform('com.fasterxml.jackson:jackson-bom:2.17.1'))
+    implementation(platform('org.springframework.security:spring-security-bom:6.3.0'))
     implementation(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
     implementation("org.springframework:spring-webmvc")
     implementation("org.springframework.security:spring-security-web")
     implementation("org.springframework.security:spring-security-config")
     implementation("org.springframework:spring-context")
     implementation("org.springframework:spring-orm")
+    implementation("org.springframework.statemachine:spring-statemachine-core:4.0.0")
+    implementation("org.springframework.statemachine:spring-statemachine-kryo:4.0.0")
+    // etc
+    implementation(platform("org.apache.logging.log4j:log4j-bom:2.23.1"))
+    implementation(platform('com.fasterxml.jackson:jackson-bom:2.17.1'))
     implementation("io.jsonwebtoken:jjwt-api:${jsonWebtokenVersion}")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation("com.fasterxml.jackson.core:jackson-databind")
@@ -48,9 +53,10 @@ dependencies {
     annotationProcessor(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
     annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen")
     annotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
+    //  tests
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
-    testImplementation(platform("org.testcontainers:testcontainers-bom:1.19.7"))
-    testImplementation(platform("org.mockito:mockito-bom:5.11.0"))
+    testImplementation(platform('org.testcontainers:testcontainers-bom:1.19.8'))
+    testImplementation(platform('org.mockito:mockito-bom:5.12.0'))
     testImplementation("org.apache.logging.log4j:log4j-slf4j2-impl")
     testImplementation("org.springframework:spring-test")
     testImplementation("org.springframework.security:spring-security-test")
