--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     //  fix
     implementation "org.apache.commons:commons-compress:1.26.1"
     //  spring
-    implementation(platform("org.springframework:spring-framework-bom:6.1.6"))
+    implementation(platform('org.springframework:spring-framework-bom:6.1.8'))
     implementation(platform('org.springframework.security:spring-security-bom:6.3.0'))
     implementation(platform("org.hibernate.orm:hibernate-platform:${hibernateVersion}"))
     implementation("org.springframework:spring-webmvc")
@@ -30,6 +30,9 @@ dependencies {
     implementation("org.springframework:spring-orm")
     implementation("org.springframework.statemachine:spring-statemachine-core:4.0.0")
     implementation("org.springframework.statemachine:spring-statemachine-kryo:4.0.0")
+    // validator
+    implementation("org.passay:passay:1.6.4")
+    implementation("org.hibernate.validator:hibernate-validator:8.0.1.Final")
     // etc
     implementation(platform("org.apache.logging.log4j:log4j-bom:2.23.1"))
     implementation(platform('com.fasterxml.jackson:jackson-bom:2.17.1'))
@@ -54,6 +57,7 @@ dependencies {
     annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen")
     annotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
     //  tests
+    testImplementation("org.glassfish.expressly:expressly:5.0.0")
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
     testImplementation(platform('org.testcontainers:testcontainers-bom:1.19.8'))
     testImplementation(platform('org.mockito:mockito-bom:5.12.0'))
