refactor/WI-40 - Fix some stuff Fix validators and handlers in accordance with dto record type Remove unused methods from UserService.java Remove unnecessary logger from JwtAuthenticationFilter.java

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.mockito:mockito-junit-jupiter")
     testImplementation("org.springframework:spring-test")
-    testImplementation("org.assertj:assertj-core:3.25.3")
+    testImplementation('org.assertj:assertj-core:3.26.0')
     testImplementation("org.testcontainers:postgresql")
     testImplementation("org.testcontainers:junit-jupiter")
     testRuntimeOnly("com.jayway.jsonpath:json-path:2.9.0")
