--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,26 @@
 services:
   postgres:
-    image: postgres:latest
-    container_name: 'homework2-postgres'
+    image: postgres:16.3
+    restart: unless-stopped
+    env_file: ./.env
     environment:
-      POSTGRES_DB: "senladb"
-      POSTGRES_USER: "senlapguser"
-      POSTGRES_PASSWORD: "pgpwd4senla"
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+    ports:
+      - $POSTGRES_LOCAL_PORT:$POSTGRES_DOCKER_PORT
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  app:
+    depends_on:
+      - postgres
+    build:
+      context: .
+    restart: on-failure
+    env_file: ./.env
     ports:
-      - "5432:5432"
-  tomcat:
-    image: tomcat:latest
-    volumes:
-      - ./build/libs:/usr/local/tomcat/webapps
-    ports:
-      - "8080:8080"
-      - "5005:5005"
-    environment:
-      JPDA_ADDRESS: "*:5005"
-    command: [ "catalina.sh", "jpda", "run" ]
+      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
 
 volumes:
   pgdata:
