--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Eclipse
-.classpath
-.project
-.settings/
- 
 # Intellij
 .idea/
 *.iml
@@ -15,6 +10,6 @@ target/
 # Java Class Files
 *.class
 
-#Gradle
-/.gradle/
-/build/
+# Blog
+.gradle/
+build/
