add/WL-1 - Add redis docker

--- a/util/.env
+++ b/util/.env
@@ -12,6 +12,9 @@ EPAY_LOCAL_PORT=8081
 EPAY_DOCKER_PORT=8081
 EPAY_DATASOURCE_URL=jdbc:postgresql://postgres:5432/epay
 
+REDIS_LOCAL_PORT=6379
+REDIS_DOCKER_PORT=6379
+
 ZOOKEEPER_LOCAL_PORT=2181
 ZOOKEEPER_DOCKER_PORT=2181
 
