--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.3'
     implementation 'org.springframework.kafka:spring-kafka:3.2.1'
     implementation 'org.liquibase:liquibase-core'
     compileOnly 'org.projectlombok:lombok'
